--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,14 @@
 body, html {
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'NanumSquare', sans-serif;
 	text-rendering: optimizeLegibility !important;
 	-webkit-font-smoothing: antialiased !important;
 	color: #666;
 	width: 100% !important;
 	height: 100% !important;
+}
+input {
+    border: none;
+    font-family: 'NanumSquare', sans-serif;
 }
 h1 {
 	font-weight: 700;
